--- a/events.html
+++ b/events.html
@@ -182,7 +182,7 @@
                                 <polyline points="7 10 12 15 17 10"/>
                                 <line x1="12" y1="15" x2="12" y2="3"/>
                             </svg>
-                            Download Presentation
+                            Download Introductory Presentation
                         </a>
                         <a href="presentations/TBCSC_Intermediate_Web_Development.pdf" download class="resource-link">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -190,7 +190,7 @@
                                 <polyline points="7 10 12 15 17 10"/>
                                 <line x1="12" y1="15" x2="12" y2="3"/>
                             </svg>
-                            Download Part 1
+                            Download Intermediate Presentation
                         </a>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                                 <polyline points="7 10 12 15 17 10"/>
                                 <line x1="12" y1="15" x2="12" y2="3"/>
                             </svg>
-                            Download Part 2
+                            Download Presentation
                         </a>
                     </div>
                 </div>
