--- a/registration.html
+++ b/registration.html
@@ -5,6 +5,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration - Tampa Bay CS Club</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .registration-content {
+            display: grid;
+            grid-template-columns: 1fr 1.5fr;
+            gap: 3rem;
+            align-items: start;
+        }
+
+        .registration-info {
+            position: sticky;
+            top: 2rem;
+        }
+
+        .registration-info h2 {
+            margin-bottom: 2rem;
+            font-size: 2rem;
+            color: #1a1a1a;
+        }
+
+        .benefits-list {
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        .benefit-item {
+            display: flex;
+            gap: 1rem;
+            align-items: flex-start;
+        }
+
+        .benefit-icon {
+            flex-shrink: 0;
+            width: 24px;
+            height: 24px;
+            color: #0066cc;
+        }
+
+        .benefit-icon svg {
+            width: 100%;
+            height: 100%;
+        }
+
+        .benefit-item h4 {
+            margin: 0 0 0.5rem 0;
+            font-size: 1.1rem;
+            color: #1a1a1a;
+        }
+
+        .benefit-item p {
+            margin: 0;
+            color: #666;
+            line-height: 1.6;
+        }
+
+        .registration-form-container {
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            overflow: hidden;
+        }
+
+        .form-header {
+            padding: 2rem;
+            background: linear-gradient(135deg, #0066cc, #0052a3);
+            color: white;
+        }
+
+        .form-header h3 {
+            margin: 0 0 0.5rem 0;
+            font-size: 1.8rem;
+        }
+
+        .form-subtitle {
+            margin: 0;
+            opacity: 0.9;
+        }
+
+        .google-form-embed {
+            padding: 0;
+        }
+
+        .google-form-embed iframe {
+            display: block;
+            width: 100%;
+            min-height: 800px;
+            border: none;
+        }
+
+        .form-note {
+            padding: 1rem 2rem;
+            margin: 0;
+            font-size: 0.85rem;
+            color: #666;
+            background: #f5f5f5;
+            border-top: 1px solid #e0e0e0;
+        }
+
+        @media (max-width: 968px) {
+            .registration-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .registration-info {
+                position: static;
+            }
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar">
@@ -73,8 +182,7 @@
                             </div>
                         </div>
                     </div>
-
-                
+                </div>
 
                 <div class="registration-form-container">
                     <div class="form-header">
