--- a/registration.html
+++ b/registration.html
@@ -187,7 +187,7 @@
                 <div class="registration-form-container">
                     <div class="form-header">
                         <h3>Member Registration</h3>
-                        <p class="form-subtitle">Complete the form below to join our community</p>
+                        <p class="form-subtitle" style="color:white">Complete the form below to join our community</p>
                     </div>
                     
                     <div class="google-form-embed">
