--- a/events.html
+++ b/events.html
@@ -122,7 +122,7 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            color: #0066cc;
+            color: white;
             text-decoration: none;
             font-weight: 500;
             transition: color 0.3s ease;
@@ -235,7 +235,7 @@
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
                                 <circle cx="12" cy="10" r="3"/>
                             </svg>
-                            Local Library
+                            In Person
                         </p>
                         <p class="event-description">Learn fundamental algorithms including sorting, searching, and basic graph traversal techniques. Perfect for students looking to strengthen their problem-solving skills.</p>
                     </div>
@@ -265,7 +265,7 @@
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
                                 <circle cx="12" cy="10" r="3"/>
                             </svg>
-                            Local Library
+                            In Person
                         </p>
                         <p class="event-description">Club officers guided students through bronze-level competitive programming problems. We covered simulation, complete search, and basic greedy algorithms.</p>
                         <div class="event-resources">
@@ -331,7 +331,7 @@
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
                                 <circle cx="12" cy="10" r="3"/>
                             </svg>
-                            Local Library
+                            In Person
                         </p>
                         <p class="event-description">Students learned HTML and CSS basics in our library meeting room. Everyone followed along and built their first simple webpage using free code editors.</p>
                         <div class="event-resources">
@@ -395,7 +395,7 @@
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
                                 <circle cx="12" cy="10" r="3"/>
                             </svg>
-                            Local Library
+                            In Person
                         </p>
                         <p class="event-description">Officers walked students through Java basics including variables, loops, and methods. Great for anyone preparing for AP Computer Science A or getting started with programming.</p>
                         <div class="event-resources">
