--- a/officers.html
+++ b/officers.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, follow">
     <title>Officers - Tampa Bay CS Club</title>
     <link rel="stylesheet" href="styles.css">
 </head>
