--- a/events.html
+++ b/events.html
@@ -220,6 +220,36 @@
                     <div class="event-card upcoming">
                         <div class="event-header">
                             <span class="event-badge upcoming-badge">Upcoming</span>
+                            <span class="event-date">Feb 8, 2026</span>
+                        </div>
+                        <h3>Python for Beginners</h3>
+                        <p class="event-time">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <circle cx="12" cy="12" r="10"/>
+                                <polyline points="12 6 12 12 16 14"/>
+                            </svg>
+                            6:00 PM - 8:00 PM EST
+                        </p>
+                        <p class="event-location">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                                <circle cx="12" cy="10" r="3"/>
+                            </svg>
+                            In Person
+                        </p>
+                        <p class="event-description">Join us for an introduction to Python programming! We'll cover the basics of syntax, variables, loops, and functions. Perfect for complete beginners looking to start their coding journey.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Past Events Section -->
+            <div class="events-section">
+                <h2 class="events-section-title">Past Events</h2>
+                
+                <div class="events-grid">
+                    <div class="event-card">
+                        <div class="event-header">
+                            <span class="event-badge">Past Event</span>
                             <span class="event-date">Dec 16, 2025</span>
                         </div>
                         <h3>Introduction to Algorithms</h3>
@@ -237,16 +267,9 @@
                             </svg>
                             In Person
                         </p>
-                        <p class="event-description">Learn fundamental algorithms including sorting, searching, and basic graph traversal techniques. Perfect for students looking to strengthen their problem-solving skills.</p>
+                        <p class="event-description">Students learned fundamental algorithms including sorting, searching, and basic graph traversal techniques. Great session for those looking to strengthen their problem-solving skills.</p>
                     </div>
-                </div>
-            </div>
 
-            <!-- Past Events Section -->
-            <div class="events-section">
-                <h2 class="events-section-title">Past Events</h2>
-                
-                <div class="events-grid">
                     <div class="event-card">
                         <div class="event-header">
                             <span class="event-badge">Past Event</span>
