--- a/events.html
+++ b/events.html
@@ -222,7 +222,7 @@
                             <span class="event-badge upcoming-badge">Upcoming</span>
                             <span class="event-date">Feb 8, 2026</span>
                         </div>
-                        <h3>Python for Beginners</h3>
+                        <h3>Assembly Language Programming</h3>
                         <p class="event-time">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <circle cx="12" cy="12" r="10"/>
@@ -237,7 +237,7 @@
                             </svg>
                             In Person
                         </p>
-                        <p class="event-description">Join us for an introduction to Python programming! We'll cover the basics of syntax, variables, loops, and functions. Perfect for complete beginners looking to start their coding journey.</p>
+                        <p class="event-description">Students explored low-level programming concepts including registers, memory addressing, and instruction sets. Great session for those looking to deepen their understanding of computer architecture and system-level operations.</p>
                     </div>
                 </div>
             </div>
