--- a/events.html
+++ b/events.html
@@ -237,7 +237,7 @@
                             </svg>
                             In Person
                         </p>
-                        <p class="event-description">Students explored low-level programming concepts including registers, memory addressing, and instruction sets. Great session for those looking to deepen their understanding of computer architecture and system-level operations.</p>
+                        <p class="event-description">Students will explore low-level programming concepts including registers, memory addressing, and instruction sets. Great session for those looking to deepen their understanding of computer architecture and system-level operations.</p>
                     </div>
                 </div>
             </div>
